<resources>
    <string name="app_name">lalaland</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="wish">Wish</string>
    <string name="wish_items">Wishlist Items</string>
    <string name="account">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="email_number">Email or Number</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_terms_info"><![CDATA[By clicking Sign Up, You agree to \nthe terms & conditions]]></string>
    <string name="connect_via">Or connect Via</string>
    <string name="facebook_app_id">222630931805793</string>
    <string name="facebook_login_protocol_scheme">fb222630931805793</string>
    <string name="picks_of_the_week">PICKS OF THE WEEK</string>
    <string name="view_all">View All</string>
    <string name="brands_in_focus">BRANDS IN FOCUS</string>
    <string name="recommendations">RECOMMENDATIONS</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_to_wish_list">Add to wish list</string>
    <string name="title_activity_product_listing">ProductListingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="sort_by">SORT BY</string>
    <string name="filter_by">FILTER BY</string>
    <string name="choose">Choose..</string>
    <string name="a_z">A - Z</string>
    <string name="z_a">Z - A</string>
    <string name="newest">NEWEST</string>
    <string name="oldest">OLDEST</string>
    <string name="high_to_low">HIGH TO LOW</string>
    <string name="low_to_high">LOW TO HIGH</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_checkout_screen">CheckoutScreen</string>
    <string name="cart_items">Cart Items</string>
    <string name="edit_change">Edit / Change</string>
    <string name="cash_on_delivery">CASH ON DELIVERY</string>
    <string name="bank_transfer">BANK TRANSFER</string>
    <string name="cash_on_delivery_policy">Cash on delivery is not applicable on order exceeding RS 40,000</string>
    <string name="checkout">CHECKOUT</string>
    <string name="cart_empty_state">Please add some products to your cart</string>
    <string name="add_new_address">Add New Address</string>
    <string name="select_shipping_address">Select Shipping Address</string>
    <string name="add_new_add_btn">+ Add new address</string>
    <string name="default_address">Make this my default address</string>
    <string name="save">Save</string>
    <string name="cancel">cancel</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="account_information">Account Information</string>
    <string name="change_name">Change Name</string>
    <string name="change_gender">Change Gender</string>
    <string name="change_date_of_birth">Change Date of Birth</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="name">Name: </string>
    <string name="edit_information">Edit Information</string>
    <string name="title_activity_select_city">SelectCityActivity</string>
    <string name="buy_now">Buy Now</string>
    <string name="addition_charge_policy">Additional charges may apply at checkout time.</string>
    <string name="product_details">PRODUCT DETAILS</string>
    <string name="material_and_care"><![CDATA[MATERIAL & CARE]]></string>
    <string name="wish_list">Wish List</string>
    <string name="all">All</string>
    <string name="lalaland">Lalaland</string>
    <string name="authenticity_guaranteed">Authenticity Guaranteed</string>
    <string name="size">Size:</string>
    <string name="quantity">Quantity</string>
    <string name="qty">Qty:</string>
    <string name="done">Done</string>
    <string name="my_orders">My Orders</string>
    <string name="confirmed">Confirmed</string>
    <string name="received">Received</string>
    <string name="in_transit">In Transit</string>
    <string name="cancelled">Cancelled</string>
    <string name="new_order">New</string>
    <string name="setting">Setting</string>
    <string name="abut_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="return_policy">Return policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="title_activity_order_listing">OrderListingActivity</string>
    <string name="order_id">Order ID:</string>
    <string name="date_time"><![CDATA[Date & Time :]]></string>
    <string name="order_received">Order Received</string>
    <string name="order_placed_successful"> You order has been placed successfully</string>
    <string name="wait_for_payment"> Wait For Your Payment</string>
    <string name="total_amount">Total Amount</string>
    <string name="track_order">Track Order</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="your_order_will_be_deliver_within_5_to_7_working_days">your order will be deliver within 5 to 7 working days</string>
</resources>