<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/category" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/cart" />

    <item
        android:id="@+id/navigation_wish"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/wish" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/account" />

</menu>
