<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="listener"
            type="com.lalaland.ecommerce.views.activities.OrderReceivedActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.activities.OrderReceivedActivity">

        <RelativeLayout

            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150dp"
            android:background="@color/colorAccent"
            android:padding="@dimen/_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView

                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/close_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_toEndOf="@+id/btn_back"
                android:text="@string/order_received"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_successful"
                android:layout_alignParentStart="true"
                android:text="@string/wait_for_payment"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_successful"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:text="@string/order_placed_successful"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <TextView

            android:id="@+id/tv_total_amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/total_amount"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_bar" />

        <TextView

            android:id="@+id/tv_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/total_amount"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_total_amount_title" />

        <LinearLayout

            android:id="@+id/btns_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_16dp"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_total_amount">

            <Button

                android:id="@+id/btn_track_order"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40dp"
                android:layout_margin="@dimen/_4dp"
                android:layout_weight=".5"
                android:textSize="12sp"
                android:background="@drawable/bg_round_corner_transparent_accent"
                android:onClick="@{(view)->listener.trackOrder(view)}"
                android:text="@string/track_order"
                android:textColor="@color/colorAccent" />

            <Button

                android:id="@+id/btn_continue_shopping"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="@dimen/_4dp"
                android:layout_weight=".5"
                android:textSize="12sp"
                android:background="@drawable/btn_bg_round_corner_accent"
                android:onClick="@{(view)->listener.continueShopping(view)}"
                android:text="@string/continue_shopping"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <TextView

            android:id="@+id/tv_delivery_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:text="@string/your_order_will_be_deliver_within_5_to_7_working_days"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_recommendation_title"
            app:layout_constraintTop_toBottomOf="@+id/btns_container" />

        <TextView

            android:id="@+id/tv_recommendation_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginBottom="@dimen/_8dp"
            android:text="@string/recommendations"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/rv_recommended_products" />

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/rv_recommended_products"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
