<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickListener"
            type="com.lalaland.ecommerce.views.fragments.registrationFragments.SignupFragment" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorScreenBg"
        android:orientation="vertical"
        tools:context="com.lalaland.ecommerce.views.fragments.registrationFragments.SignupFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorScreenBg"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/et_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/ti_contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/et_contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_number"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/ti_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/ti_confirm_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/et_confirm_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/ti_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/ti_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/et_date_of_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_of_birth"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup

                    android:id="@+id/rg_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton

                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:checked="true"
                        android:text="@string/gender_male"
                        android:textColor="@color/colorLightGray" />

                    <RadioButton

                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/gender_female"
                        android:textColor="@color/colorLightGray" />
                </RadioGroup>

                <Button

                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_bg_round_corner_accent"
                    android:onClick="@{()->clickListener.registerUser()}"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white" />

                <TextView

                    android:id="@+id/tv_sign_up_terms_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/sign_up_terms_info"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView

                    android:id="@+id/tv_connect_via"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/connect_via"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <FrameLayout

                        android:id="@+id/btn_fb_sign_up"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="8dp"
                        android:background="@drawable/round_fb_btn"
                        android:clickable="true"
                        android:elevation="4dp"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:onClick="@{()->clickListener.registerUserWithFacebook()}">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/facebook_icon" />
                    </FrameLayout>

                    <FrameLayout

                        android:id="@+id/btn_google_sign_up"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:elevation="4dp"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:onClick="@{()->clickListener.registerUserWithGoogle()}">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/google_icon" />
                    </FrameLayout>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>
